--- a/aspclient/Makefile
+++ b/aspclient/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -o aspclient.out -g -Wall -I/home/doug/asp -Iaspclient -lglut -lGL -lGLU aspclient/*.cpp
+	g++ -O0 -o aspclient.out -g -Wall -I/home/doug/asp -Iaspclient -lglut -lGL -lGLU aspclient/*.cpp
