--- a/aspserver/Makefile
+++ b/aspserver/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -o aspserver.out -g -Wno-deprecated -I/home/doug/asp -Iaspserver -lpthread aspserver/*.cpp
+	g++ -std=c++0x -o aspserver.out -g -Wno-deprecated -I/home/doug/asp -Iaspserver -lpthread aspserver/*.cpp
