use murmur hash for our NetworkKey hash function

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ aspclient/aspclient.out
 aspserver/aspserver.out
 aspserver/aspserver/*.gch
 aspserver/aspserver/old/
+aspserver/aspserver/*.swp
+aspclient/aspclient/*.swp
