--- a/aspclient/src/Makefile
+++ b/aspclient/src/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -g -I. -I../../library -I../../library/network -I../../ *.cpp packets/*.cpp -L../../library -lasp -lglut
+	g++ -g -I. -I../../library -I../../library/network -I../../ *.cpp packets/*.cpp -L../../library -lasp -lglut -lGL -lGLU
