Fix various issues: - Client list was not properly updating on server or client - Client was running at 100% CPU - Server was not responding with proper x,y,z coordinates - Server was not using the PacketStream to send its packets

--- a/aspclient/src/Makefile
+++ b/aspclient/src/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -g -I. -I../../library -I../../library/network -I../../ *.cpp packets/*.cpp -L../../library -lasp -lglut -lGL -lGLU
+	g++ -g -o aspclient -I. -I../../library -I../../library/network -I../../ *.cpp packets/*.cpp -L../../library -lasp -lglut -lGL -lGLU
