Add some test cases to the memory pool - fix any bugs that the test cases pointed out - add to the general make file

--- a/libtest/Makefile
+++ b/libtest/Makefile
@@ -1,2 +1,4 @@
 PacketStreamTest:
 	g++ -g -Wall -I../library -I../library/network/ PacketStreamTest.cpp -L../library -lasp
+MemoryPoolTest:
+	g++ -g -Wall -I../library MemoryPoolTest.cpp -L.. -lasp
