Add an avl tree template

--- a/libtest/Makefile
+++ b/libtest/Makefile
@@ -2,3 +2,7 @@ PacketStreamTest:
 	g++ -g -Wall -I../library -I../library/network/ PacketStreamTest.cpp -L../library -lasp
 MemoryPoolTest:
 	g++ -g -Wall -I../library MemoryPoolTest.cpp -L.. -lasp
+ASPLibTest:
+	g++ -g -Wall -I../library ASPLibTest.cpp -L.. -lasp
+AvlTreeTest:
+	g++ -g -Wall -I../library AvlTreeTest.cpp
