Various fixes to the AVL tree and supporting modules

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@ aspclient/aspclient.out
 aspserver/aspserver.out
 aspserver/aspserver/*.gch
 aspserver/aspserver/old/
-aspserver/aspserver/*.swp
-aspclient/aspclient/*.swp
 aclocal.m4
-aspclient/src/.deps/
-aspserver/src/.deps/
-aspclient/src/.dirstamp
 config.log
 config.status
 autom4te.cache/
+*.o
+*.swp
+*a.out
+*.deps
+*.dirstamp
