Make a general-purpose test class for future tests

--- a/libtest/Makefile
+++ b/libtest/Makefile
@@ -5,4 +5,4 @@ MemoryPoolTest:
 ASPLibTest:
 	g++ -g -Wall -I../library ASPLibTest.cpp -L.. -lasp
 AvlTreeTest:
-	g++ -g -Wall -I../library AvlTreeTest.cpp
+	g++ -g -Wall -I../library Test.cpp AvlTreeTest.cpp
