Add a new in-place templatized list class

--- a/libtest/Makefile
+++ b/libtest/Makefile
@@ -6,3 +6,5 @@ ASPLibTest:
 	g++ -g -Wall -I../library ASPLibTest.cpp -L.. -lasp
 AvlTreeTest:
 	g++ -g -Wall -I../library Test.cpp AvlTreeTest.cpp
+ListTest:
+	g++ -g -Wall -I../library Test.cpp ListTest.cpp
